--- a/wiki/asdoc.wiki
+++ b/wiki/asdoc.wiki
@@ -97,3 +97,172 @@ we use that to document the packages, formating sucks but I guess it's better th
 
 All the other tricks and hacks happen in `build/doc/templates/`, there are too numerous to list just do a diff with a basic asdoc template.
 
+
+== Conventions ==
+
+use the tags
+{{{
+    /**
+     * @langversion 3.0
+     * @playerversion AVM 0.4
+     */
+}}}
+
+`langversion 3.0` will translate to *Language Version : ActionScript 3.0*<br\>
+`playerversion AVM 0.4` will translate to *Runtime Versions : 	RedTamarin 0.4*
+
+Also you will see a little "monkey" icon next to the definition.
+
+The rule is as follow:
+  * if API is only for Flash Player, no icons
+  * if API is for Flash Player and AIR, no icons
+  * if API is only for AIR, use AIR icon
+  * if API is only for RedTamarin, use "monkey" icon
+
+== Examples ==
+
+`src/as3/C/errno.as`
+{{{
+    /**
+     * Last error number.
+     *
+     * <p>
+     * A value is stored in <b>errno</b> by certain library functions when they detect errors.
+     * </p>
+     *
+     * <p>
+     * At program startup, the value stored is zero. Library functions store only values greater than zero.
+     * Any library function can alter the value stored before return, whether or not they detect errors.
+     * </p>
+     *
+     * <p>
+     * Most functions indicate that they detected an error by returning a special value,
+     * typically <code>NULL</code> for functions that return pointers, and <code>-1</code> for functions that return integers.
+     * A few functions require the caller to preset errno to zero and test it afterwards to see if an error was detected.
+     * </p>
+     *
+     * @example basic usage
+     * <listing version="3.0">
+     *  import C.errno.&#42;;
+     *  import C.string.&#42;;
+     *  import avmplus.FileSystem;
+     *  
+     *  var filename:String = "dummy_file";
+     *  
+     *  if( !FileSystem.exists( filename ) )
+     *  {
+     *      trace( "errno = " + int(errno) + " - " + errno ); //errno = 2 - No such file or directory
+     *  }
+     * </listing>
+     *
+     * @example ActionScript Error usage
+     * <listing version="3.0">
+     *  import C.errno.&#42;;
+     *  import C.string.&#42;;
+     *  import avmplus.FileSystem;
+     *  
+     *  var filename:String = "dummy_file";
+     *  
+     *  if( !FileSystem.exists( filename ) )
+     *  {
+     *      var e:CError = new CError( errno );
+     *      trace( e ); //ENOENT: No such file or directory
+     *  }
+     * </listing>
+     *
+     * 
+     * @example read errno
+     * <listing version="3.0">
+     *  import C.errno.&#42;;
+     *  
+     *  //let's assume that errno = 2;
+     *  
+     *  trace( errno ); //wil use the toString() method, output: No such file or directory
+     *  
+     *  trace( errno.value ); //return the value of errno as a int, output: 2
+     *  
+     *  trace( int(errno) ); //will cast the valueOf() to int, output: 2
+     *  
+     *  trace( errno.valueOf() ); //will return the valueOf(), output: 2
+     *  
+     *  trace( errno.toString() ); //will return the toString(), output: No such file or directory
+     * </listing>
+     * 
+     * @example write errno
+     * <listing version="3.0">
+     *  import C.errno.&#42;;
+     *  
+     *  errno.value = 0; //reset errno
+     *  
+     * </listing>
+     *
+     * @langversion 3.0
+     * @playerversion AVM 0.4
+     *
+     * @see ErrorNumber
+     */
+    public const errno:ErrorNumber = new ErrorNumber();
+}}}
+
+`src/as3/C/stdio.as`
+{{{
+/**
+* stdio.h - standard buffered input/output
+* 
+* @langversion 3.0
+* @playerversion AVM 0.4
+* 
+* @see http://pubs.opengroup.org/onlinepubs/9699919799/basedefs/stdio.h.html
+*/
+package C.stdio
+{
+
+    /**
+     * Rename a file.
+     *
+     * <p>
+     * The <code>rename()</code> function shall change the name of a file.
+     * </p>
+     * 
+     * <p>
+     * If the <code>rename()</code> function fails for any reason other than <code>EIO</code>,
+     * any file named by <code>newname</code> shall be unaffected.
+     * </p>
+     *
+     * @example usage
+     * <listing>
+     * import C.errno.&#42;;
+     * import C.stdio2.&#42;;
+     * 
+     * var result:int = rename2( "/test/heelo.txt", "/test/world.txt" );
+     * 
+     * if( result &lt; 0 )
+     * {
+     *     trace( new CError( errno ) );
+     * }
+     * </listing>
+     * 
+     * @param oldname The pathname of the file to be renamed.
+     * @param newname The new pathname of the file.
+     * @return Upon successful completion, the <code>rename()</code> function shall return <code>0</code>.
+     * Otherwise, it shall return <code>-1</code>, <code>errno</code> shall be set to indicate the error,
+     * and neither the file named by <code>oldname</code> nor the file named by <code>newname</code> shall be changed or created.
+     * 
+     * @throws CError EACCES
+     * @throws CError EBUSY
+     * @throws CError EEXIST or ENOTEMPTY
+     * @throws CError EINVAL
+     * @throws CError EIO
+     * @throws CError etc.
+     *
+     * @langversion 3.0
+     * @playerversion AVM 0.4
+     * 
+     * @see http://pubs.opengroup.org/onlinepubs/9699919799/functions/rename.html
+     * @see C.errno
+     */
+    [native("::avmshell::CStdioClass::rename")]
+    public native function rename( oldname:String, newname:String ):int;
+
+}
+}}}
