Edited wiki page TOC through web user interface.

--- a/wiki/TOC.wiki
+++ b/wiki/TOC.wiki
@@ -45,6 +45,7 @@
     * [ASC ActionScript Compiler] (ASC)
     * [ASC2 ActionScript Compiler 2] (ASC2)
     * [ABC ActionScript Byte Code] (ABC)
+    * [asdoc asdoc]
     * [SWC SWC]
     * [Projector Projector]
     * [Security Security]
