--- a/wiki/clib.wiki
+++ b/wiki/clib.wiki
@@ -30,6 +30,8 @@ var test:String = getenv( "HOME" );
 
 these are the main reasons to do that
 
-  # in general, C give you a low-level universal access to things<br/>wether you know `chmod()` on the command line or you used `mkdir()` in PHP, Python, etc. you already used a bit of *C* somewhere
+  # in general, C give you a low-level universal access to things
+wether you know `chmod()` on the command line or you used `mkdir()` in PHP, Python, etc.
+you already used a bit of *C* somewhere
   # building uppon this kind low-level you can build bigger things<br/>in our case we will reuse `mkdir()` to define `FileSystem.makeDirectory()`<br/>maybe you want to build your own API or do things a bit differently<br/>if yonly you had access to `mkdir()`...well you have access
   # etc
