--- a/wiki/clib.wiki
+++ b/wiki/clib.wiki
@@ -35,15 +35,17 @@ these are the main reasons to do that
   # in general, C give you a low-level universal access to things<br/>wether you know `chmod` on the command line or you used `mkdir()` in PHP, Python, etc.<br/>you already used a bit of *C* somewhere.
   # building uppon this kind of low-level you can build bigger things<br/>in our case we will reuse `mkdir()` to define `FileSystem.makeDirectory()`<br/>maybe you want to build your own API or do things a bit differently<br/>if only you had access to `mkdir()`...well you have access!!
   # A C library help to port to AS3 other kind of libraries,<br/>either duplicate something you have seen done in Python or Ruby, etc<br/>or easily port a C code example to AS3.
+  # Those C libraries are mainly functions and are easily portable and sharable<br/>(we know from our experience with maashaack *core* package)
   # it helps at the same time C developers coming to AS3<br/>and AS3 developers learning/reusing C.
 
-<br/>
 <br/>
 But let's be clear, we are not saying we giving you a way to compile C to AS3 (if you need that use ANE or CrossBridge).
 
 No, what we are saying is that we give you a way to integrates "C style programming and functionalities" into your AS3 program.
 
 It is not perfect and have limitations, but when you want to build things for the command line and the server side it can come very handy.
+
+<br/>
 
 == What do we support exactly ? ==
 
@@ -101,3 +103,169 @@ with those headers
 and some non-standard things
 
 All that represent the *clib* or *The C Standard Library for AS3*.
+
+<br/>
+
+We will unlikely support 100% of C, simply because things work differently in AS3, but in general we will make our best effort to have a library that make sens to use.
+
+<br/>
+
+== Level of support ==
+
+First, let's explain the basic.
+
+This library is contained in the *C* package<br/>
+and is in favour of an AS3 syntax.
+
+in *C*
+{{{
+#include <stdlib.h>
+#include <sys/stat.h>
+}}}
+
+in  *AS3*
+{{{
+import C.stdlib.*;
+import C.sys.stat.*;
+}}}
+
+<br/>
+
+Those C packages will mainly define
+<br/>
+
+*constants* and/or *macros*
+
+{{{
+package C.errno
+{
+    /**
+     * Argument list too long.
+     *
+     * @langversion 3.0
+     * @playerversion AVM 0.4
+     */
+    public const E2BIG:int = 7;
+}
+}}}
+
+in some cases hardcoded for a common behaviour
+
+
+{{{
+package C.limits
+{
+    /**
+     * Maximum number of bytes the implementation will store as a pathname.
+     *
+     * @langversion 3.0
+     * @playerversion AVM 0.4
+     */
+    [native("::avmshell::CLimitsClass::get_PATH_MAX")]
+    public native function get PATH_MAX():int;
+}
+}}}
+
+sometimes dynamically fetched from the current system
+
+<br/>
+
+*functions*
+
+{{{
+package C.stdio
+{
+    /**
+     * Rename a file.
+     *
+     * @langversion 3.0
+     * @playerversion AVM 0.4
+     */
+    [native("::avmshell::CStdioClass::rename")]
+    public native function rename( oldname:String, newname:String ):int;
+}
+}}}
+
+that may or may not change the original C function signature
+
+<br/>
+
+*classes*
+
+{{{
+package C.stdio
+{
+    /**
+     * A structure containing information about a file.
+     *
+     * <p>
+     * <b>FILE</b> is a type suitable for storing information for a file stream.
+     * </p>
+     *
+     * @langversion 3.0
+     * @playerversion AVM 0.4
+     */
+    [native(cls="::avmshell::CStdio_FILEClass", methods="auto", construct="none")]
+    public class FILE
+    {
+        //...
+    }
+}
+}}}
+
+used to replace *typedef* and/or *struct* so the C context can exchange *types* with the AS3 context
+
+<br/>
+
+Here a usage example
+
+if you have this in C
+{{{
+typedef FILE
+
+typedef fpos_t
+
+FILE *fopen(const char *filename, const char *mode);
+
+int fgetpos(FILE *stream, fpos_t *pos);
+}}}
+
+you will use it like that in AS3
+{{{
+import C.errno.*;
+import C.stdio.*;
+
+var file:FILE = fopen( "foobar.txt", "w" );
+
+var pos:fpos_t = new fpos_t();
+var result:int = fgetpos( file, pos );
+
+if( result != 0 )
+{
+    throw new CError( errno );
+}
+}}}
+
+yep, it feels like C but it is still AS3.
+
+<br/>
+
+The following will details which level of support we provide per header or package.
+
+
+
+=== `<assert.h>` ===
+=== `<ctype.h>` ===
+=== `<errno.h>` ===
+  * `<float.h>`
+  * `<limits.h>`
+  * `<locale.h>`
+  * `<math.h>`
+  * `<setjmp.h>`
+  * `<signal.h>`
+  * `<stdarg.h>`
+  * `<stddef.h>`
+  * `<stdio.h>`
+  * `<stdlib.h>`
+  * `<string.h>`
+  * `<time.h>`
