--- a/wiki/clib.wiki
+++ b/wiki/clib.wiki
@@ -255,17 +255,117 @@ The following will details which level of support we provide per header or packa
 
 
 === `<assert.h>` ===
+<font color="orange">*ANSI C (C89) / ISO C (C90)*</font><br/>
+<font color="red">not implemented</font>
+
 === `<ctype.h>` ===
+<font color="orange">*ANSI C (C89) / ISO C (C90)*</font><br/>
+
 === `<errno.h>` ===
-  * `<float.h>`
-  * `<limits.h>`
-  * `<locale.h>`
-  * `<math.h>`
-  * `<setjmp.h>`
-  * `<signal.h>`
-  * `<stdarg.h>`
-  * `<stddef.h>`
-  * `<stdio.h>`
-  * `<stdlib.h>`
-  * `<string.h>`
-  * `<time.h>`
+<font color="orange">*ANSI C (C89) / ISO C (C90)*</font><br/>
+
+=== `<float.h>` ===
+<font color="orange">*ANSI C (C89) / ISO C (C90)*</font><br/>
+<font color="red">not supported</font>
+
+=== `<limits.h>` ===
+<font color="orange">*ANSI C (C89) / ISO C (C90)*</font><br/>
+<font color="orange">partially supported</font>
+
+=== `<locale.h>` ===
+<font color="orange">*ANSI C (C89) / ISO C (C90)*</font><br/>
+
+=== `<math.h>` ===
+<font color="orange">*ANSI C (C89) / ISO C (C90)*</font><br/>
+
+=== `<setjmp.h>` ===
+<font color="orange">*ANSI C (C89) / ISO C (C90)*</font><br/>
+<font color="red">not supported</font>
+
+=== `<signal.h>` ===
+<font color="orange">*ANSI C (C89) / ISO C (C90)*</font><br/>
+
+=== `<stdarg.h>` ===
+<font color="orange">*ANSI C (C89) / ISO C (C90)*</font><br/>
+<font color="red">not supported</font>
+
+=== `<stddef.h>` ===
+<font color="orange">*ANSI C (C89) / ISO C (C90)*</font><br/>
+<font color="red">not supported</font>
+
+=== `<stdio.h>` ===
+<font color="orange">*ANSI C (C89) / ISO C (C90)*</font><br/>
+
+=== `<stdlib.h>` ===
+<font color="orange">*ANSI C (C89) / ISO C (C90)*</font><br/>
+
+=== `<string.h>` ===
+<font color="orange">*ANSI C (C89) / ISO C (C90)*</font><br/>
+
+=== `<time.h>` ===
+<font color="orange">*ANSI C (C89) / ISO C (C90)*</font><br/>
+
+=== `<cpio.h>` ===
+<font color="orange">*POSIX.1*</font><br/>
+<font color="red">not implemented</font>
+
+=== `<dirent.h>` ===
+<font color="orange">*POSIX.1*</font><br/>
+<font color="red">not implemented</font>
+
+=== `<fcntl.h>` ===
+<font color="red">not implemented</font>
+
+=== `<grp.h>` ===
+<font color="red">not implemented</font>
+
+=== `<netdb.h>` ===
+<font color="red">not implemented</font>
+
+=== `<pthread.h>` ===
+<font color="red">not implemented</font>
+
+=== `<pwd.h>` ===
+<font color="red">not implemented</font>
+
+=== `<spawn.h>` ===
+<font color="red">not implemented</font>
+
+=== `<sys/ipc.h>` ===
+<font color="red">not implemented</font>
+
+=== `<sys/mman.h>` ===
+<font color="red">not implemented</font>
+
+=== `<sys/msg.h>` ===
+<font color="red">not implemented</font>
+
+=== `<sys/sem.h>` ===
+<font color="red">not implemented</font>
+
+=== `<sys/stat.h>` ===
+<font color="red">not implemented</font>
+
+=== `<sys/time.h>` ===
+<font color="red">not implemented</font>
+
+=== `<sys/types.h>` ===
+<font color="red">not implemented</font>
+
+=== `<sys/utsname.h>` ===
+<font color="red">not implemented</font>
+
+=== `<sys/wait.h>` ===
+<font color="red">not implemented</font>
+
+=== `<tar.h>` ===
+<font color="red">not implemented</font>
+
+=== `<termios.h>` ===
+<font color="red">not implemented</font>
+
+=== `<unistd.h>` ===
+<font color="orange">partially supported</font>
+
+=== `<utime.h>` ===
+<font color="red">not implemented</font>
